--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,14 +8,17 @@
   justify-content: space-between;
   align-items: center;
   height: 99vh;
-  border: solid 1px;
 }
 .Mainlayout .left{
   width: 15%;
   height: 100%;
-  background-color: #ccc;
+  background-color: rgba(255, 255, 255, 0.87);
 }
 .Mainlayout .right{
-  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 85%;
   height: 100%;
+  background-color: #f0f0f0;
 }
