--- a/src/styles/components.modules.css
+++ b/src/styles/components.modules.css
@@ -30,33 +30,28 @@ Styling for the SideBar component
             color: #000;
             font-weight: 430;
             font-size: 16px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            padding: 5px 0;
+            border-radius: 10px;
+            p{
+                margin: 0;
+                text-align: left;
+                width: 60%;
+            }
             &:hover{
-                color: #fff7f9;
+                background-color: #fb96a8;
+                color: #fff;
                 cursor: pointer;
                 transition: all 0.1s ease;
             }
     }
-}
-.menuItem{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 5px 0;
-    font-size: 16px;
-    border-radius: 10px;
-    color: #000;
-    font-weight: 430;
-    &:hover{
+    li.active{
         background-color: #ef637c;
-        cursor: pointer;
-    }
-    p{
-        margin: 0;
-        text-align: left;
-        width: 60%;
+        color: #fff7f9;
     }
 }
-
 /**
 Styling for the TopBar component
 **/
